@@ -39,6 +39,11 @@ Changes in version 2.3.0
    o stk_param_estim can provide a value for param0 when it is missing from the
      list of input arguments.
 
+* Prediction
+
+   o stk_predict computes lambda_mu and RS only when necessary,
+     depending on the number of output arguments.
+
 * Covariance functions
 
    o stk_noisecov now has a 'pairwise' argument, like the others.
